check if the email valid

--- a/app/src/main/res/layout/activity_coupons_by_category.xml
+++ b/app/src/main/res/layout/activity_coupons_by_category.xml
@@ -53,7 +53,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="parent"></ListView>
 
     <ImageButton
         android:id="@+id/cpnByCategory_btnSearch"
