--- a/app/src/main/res/layout/activity_manage_companies.xml
+++ b/app/src/main/res/layout/activity_manage_companies.xml
@@ -97,7 +97,7 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="Company Code"
-                android:inputType="text" />
+                android:inputType="number" />
 
             <ImageButton
                 android:id="@+id/manageCompanies_btnSearch"
