--- a/app/src/main/res/layout/activity_manage_customers.xml
+++ b/app/src/main/res/layout/activity_manage_customers.xml
@@ -94,7 +94,7 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="Customer ID"
-                android:inputType="text" />
+                android:inputType="number" />
 
             <ImageButton
                 android:id="@+id/manageCustomers_btnSearch"
