--- a/app/src/main/res/layout/activity_update_coupon.xml
+++ b/app/src/main/res/layout/activity_update_coupon.xml
@@ -22,22 +22,25 @@
         app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
         app:titleTextColor="#F1EAEA" />
 
-    <Spinner
-        android:id="@+id/updateCoupon_spCategory"
-        android:layout_width="350dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="64dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/updateCoupon_toolbar" />
+
+    <EditText
+        android:id="@+id/updateCoupon_etPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:ems="10"
+        android:hint="Price"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="@+id/updateCoupon_etAmount"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/updateCoupon_etAmount"
+        app:layout_constraintTop_toBottomOf="@+id/updateCoupon_etAmount" />
 
     <EditText
         android:id="@+id/updateCoupon_etTitle"
         android:layout_width="350dp"
         android:layout_height="44dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Title"
         android:inputType="text"
@@ -50,7 +53,7 @@
         android:id="@+id/updateCoupon_etDescription"
         android:layout_width="350dp"
         android:layout_height="41dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="Description"
         android:inputType="text"
@@ -63,37 +66,48 @@
         android:id="@+id/updateCoupon_etStartDate"
         android:layout_width="217dp"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
+        android:focusable="false"
         android:hint="Start Date"
         android:inputType="date"
+        android:onClick="onStartDateClick"
         app:layout_constraintEnd_toEndOf="@+id/updateCoupon_etDescription"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/updateCoupon_etDescription"
-        app:layout_constraintTop_toBottomOf="@+id/updateCoupon_etDescription"
-        android:focusable="false"
-        android:onClick="onStartDateClick"/>
+        app:layout_constraintTop_toBottomOf="@+id/updateCoupon_etDescription" />
 
     <EditText
         android:id="@+id/updateCoupon_etEndDate"
         android:layout_width="217dp"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
+        android:focusable="false"
         android:hint="End Date"
         android:inputType="date"
+        android:onClick="onEndDateClick"
         app:layout_constraintEnd_toEndOf="@+id/updateCoupon_etStartDate"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/updateCoupon_etStartDate"
-        app:layout_constraintTop_toBottomOf="@+id/updateCoupon_etStartDate"
-        android:focusable="false"
-        android:onClick="onEndDateClick"/>
+        app:layout_constraintTop_toBottomOf="@+id/updateCoupon_etStartDate" />
+
+    <Spinner
+        android:id="@+id/updateCoupon_spCategory"
+        android:layout_width="350dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="68dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.901"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/updateCoupon_toolbar" />
 
     <EditText
         android:id="@+id/updateCoupon_etAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Amount"
         android:inputType="numberDecimal"
@@ -103,18 +117,18 @@
 
         app:layout_constraintTop_toBottomOf="@+id/updateCoupon_etEndDate" />
 
-    <EditText
-        android:id="@+id/updateCoupon_etPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:hint="Price"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="@+id/updateCoupon_etAmount"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/updateCoupon_etAmount"
-        app:layout_constraintTop_toBottomOf="@+id/updateCoupon_etAmount" />
+    <ImageButton
+        android:id="@+id/updateCoupon_addIm"
+        android:layout_width="177dp"
+        android:layout_height="104dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/updateCoupon_btnUpdate"
+        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/add_photo_icon" />
 
     <Button
         android:id="@+id/updateCoupon_btnUpdate"
@@ -142,15 +156,14 @@
         app:layout_constraintTop_toBottomOf="@+id/updateCoupon_toolbar"
         app:srcCompat="@drawable/back" />
 
-    <EditText
-        android:id="@+id/updateCoupon_etImgSrc"
+    <TextView
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:hint="Image src"
-        android:inputType="text"
+        android:layout_marginTop="16dp"
+        android:text="add image"
         app:layout_constraintEnd_toEndOf="@+id/updateCoupon_etPrice"
         app:layout_constraintStart_toStartOf="@+id/updateCoupon_etPrice"
         app:layout_constraintTop_toBottomOf="@+id/updateCoupon_etPrice" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
