--- a/app/src/main/res/layout/activity_buy_coupon.xml
+++ b/app/src/main/res/layout/activity_buy_coupon.xml
@@ -107,15 +107,15 @@ tools:context=".BuyCouponActivity">
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-                <EditText
-                    android:id="@+id/buyCpn_etMaxPrice"
-                    android:layout_width="199dp"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="Maximum Price"
-                    android:inputType="numberDecimal"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+            <EditText
+                android:id="@+id/buyCpn_etMaxPrice"
+                android:layout_width="199dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Maximum Price"
+                android:inputType="text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <Space
                 android:layout_width="58dp"
