--- a/app/src/main/res/layout/activity_add_company.xml
+++ b/app/src/main/res/layout/activity_add_company.xml
@@ -83,7 +83,7 @@
                 android:layout_marginTop="80dp"
                 android:ems="10"
                 android:hint="Email"
-                android:inputType="textEmailAddress"
+                android:inputType="text|textEmailAddress"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
