--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -113,7 +113,7 @@
                 android:layout_marginTop="44dp"
                 android:ems="10"
                 android:hint="Email"
-                android:inputType="textEmailAddress"
+                android:inputType="text|textEmailAddress"
                 app:layout_constraintEnd_toEndOf="@+id/addCustomer_etLName"
                 app:layout_constraintStart_toStartOf="@+id/addCustomer_etLName"
                 app:layout_constraintTop_toBottomOf="@+id/addCustomer_etLName" />
