--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,12 +14,26 @@
         android:background="@drawable/edit_text_boarder"
         android:ems="10"
         android:hint=" User Name"
-        android:inputType="textEmailAddress"
+        android:inputType="text"
         android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="353dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="56dp"
+        android:background="@android:drawable/zoom_plate"
+        android:backgroundTint="#D6C424"
+        android:gravity="center"
+        android:text="COUPIFY "
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/main_etPassword"
@@ -38,7 +52,7 @@
         android:id="@+id/main_rg"
         android:layout_width="270dp"
         android:layout_height="135dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="100dp"
         android:background="@drawable/edit_text_boarder"
         app:layout_constraintStart_toStartOf="@+id/main_etPassword"
         app:layout_constraintTop_toBottomOf="@+id/main_etPassword">
@@ -83,22 +97,7 @@
         android:text="Log In"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/main_rg"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/main_rg"
-        app:layout_constraintTop_toBottomOf="@+id/main_rg"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="411dp"
-        android:layout_height="113dp"
-        android:layout_marginTop="40dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/mylogo" />
+        app:layout_constraintTop_toBottomOf="@+id/main_rg" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
