--- a/app/src/main/res/layout/activity_coupons_by_price.xml
+++ b/app/src/main/res/layout/activity_coupons_by_price.xml
@@ -24,14 +24,13 @@
         android:id="@+id/cpnByPrice_lv"
         android:layout_width="372dp"
         android:layout_height="435dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
         android:background="@drawable/border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.41"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cpnByPrice_btnSearch"
-        app:layout_constraintVertical_bias="0.952" />
+        app:layout_constraintTop_toBottomOf="@+id/cpnByPrice_etPrice"
+        app:layout_constraintVertical_bias="0.835" />
 
     <ImageButton
         android:id="@+id/cpnByPrice_btnBack"
@@ -51,23 +50,23 @@
         android:id="@+id/cpnByPrice_etPrice"
         android:layout_width="273dp"
         android:layout_height="48dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Maximum Price"
         android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cpnByPrice_btnBack"
-        app:layout_constraintTop_toBottomOf="@+id/cpnByPrice_toolBar" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cpnByPrice_btnBack" />
 
     <ImageButton
         android:id="@+id/cpnByPrice_btnSearch"
-        android:layout_width="90dp"
-        android:layout_height="58dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="@+id/cpnByPrice_etPrice"
-        app:layout_constraintHorizontal_bias="0.415"
-        app:layout_constraintStart_toStartOf="@+id/cpnByPrice_etPrice"
-        app:layout_constraintTop_toBottomOf="@+id/cpnByPrice_etPrice"
+        android:layout_width="88dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.529"
+        app:layout_constraintStart_toEndOf="@+id/cpnByPrice_etPrice"
+        app:layout_constraintTop_toBottomOf="@+id/cpnByPrice_btnBack"
         app:srcCompat="@android:drawable/ic_menu_search" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
