small fixes,Customer+company (customer profile) + Added 6 more categories

--- a/app/src/main/res/layout/activity_buy_coupon.xml
+++ b/app/src/main/res/layout/activity_buy_coupon.xml
@@ -113,7 +113,7 @@ tools:context=".BuyCouponActivity">
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Maximum Price"
-                android:inputType="text"
+                android:inputType="numberDecimal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
