--- a/app/src/main/res/layout/activity_coupons_by_category.xml
+++ b/app/src/main/res/layout/activity_coupons_by_category.xml
@@ -22,9 +22,9 @@
 
     <Spinner
         android:id="@+id/cpnByCategory_sp"
-        android:layout_width="277dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="32dp"
+        android:layout_width="287dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -34,7 +34,7 @@
         android:layout_width="264dp"
         android:layout_height="40dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="32dp"
         android:gravity="center|start"
         android:text="choose category "
         android:textSize="20sp"
@@ -44,8 +44,8 @@
 
     <ListView
         android:id="@+id/cpnByCategory_lv"
-        android:layout_width="382dp"
-        android:layout_height="418dp"
+        android:layout_width="396dp"
+        android:layout_height="490dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="5dp"
@@ -53,21 +53,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
-        app:layout_constraintStart_toStartOf="parent"></ListView>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cpnByCategory_sp"></ListView>
 
     <ImageButton
         android:id="@+id/cpnByCategory_btnSearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:backgroundTint="#A39305"
         android:text="Search"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/cpnByCategory_sp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/cpnByCategory_sp"
-        app:layout_constraintTop_toBottomOf="@+id/cpnByCategory_sp"
+        app:layout_constraintBottom_toBottomOf="@+id/cpnByCategory_sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/cpnByCategory_sp"
+        app:layout_constraintTop_toTopOf="@+id/cpnByCategory_sp"
         app:srcCompat="@android:drawable/ic_menu_search" />
 
     <ImageButton
@@ -75,11 +75,11 @@
         android:layout_width="63dp"
         android:layout_height="51dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:backgroundTint="#FFFFFF"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
-        app:layout_constraintHorizontal_bias="0.338"
+        app:layout_constraintHorizontal_bias="0.153"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cpnByCategory_toolBar"
         app:srcCompat="@drawable/back" />
