--- a/app/src/main/res/layout/activity_coupons_by_price.xml
+++ b/app/src/main/res/layout/activity_coupons_by_price.xml
@@ -22,15 +22,13 @@
 
     <ListView
         android:id="@+id/cpnByPrice_lv"
-        android:layout_width="372dp"
-        android:layout_height="435dp"
+        android:layout_width="388dp"
+        android:layout_height="483dp"
         android:background="@drawable/border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.41"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cpnByPrice_etPrice"
-        app:layout_constraintVertical_bias="0.835" />
+        app:layout_constraintTop_toBottomOf="@+id/cpnByPrice_btnSearch" />
 
     <ImageButton
         android:id="@+id/cpnByPrice_btnBack"
@@ -54,7 +52,7 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Maximum Price"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cpnByPrice_btnBack" />
 
@@ -63,6 +61,7 @@
         android:layout_width="88dp"
         android:layout_height="48dp"
         android:layout_marginTop="20dp"
+        android:backgroundTint="#A39305"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintStart_toEndOf="@+id/cpnByPrice_etPrice"
