--- a/app/src/main/res/layout/activity_customer_view_profile.xml
+++ b/app/src/main/res/layout/activity_customer_view_profile.xml
@@ -26,9 +26,9 @@ tools:context=".CustomerViewProfileActivity">
         android:layout_width="140dp"
         android:layout_height="44dp"
         android:layout_marginTop="180dp"
+        android:autoText="false"
         android:background="@drawable/border"
         android:gravity="center|start"
-        android:text="customerID"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.074"
@@ -36,18 +36,17 @@ tools:context=".CustomerViewProfileActivity">
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-    android:id="@+id/fragCustViewProfile_tvCustName"
-    android:layout_width="211dp"
-    android:layout_height="46dp"
-    android:layout_marginTop="44dp"
-    android:background="@drawable/border"
-    android:gravity="center|start"
-    android:text="name"
-    android:textSize="20sp"
-    app:layout_constraintEnd_toEndOf="@+id/fragCustViewProfile_tvCustID"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintStart_toStartOf="@+id/fragCustViewProfile_tvCustID"
-    app:layout_constraintTop_toBottomOf="@+id/fragCustViewProfile_tvCustID" />
+        android:id="@+id/fragCustViewProfile_tvCustName"
+        android:layout_width="211dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="44dp"
+        android:background="@drawable/border"
+        android:gravity="center|start"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/fragCustViewProfile_tvCustID"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/fragCustViewProfile_tvCustID"
+        app:layout_constraintTop_toBottomOf="@+id/fragCustViewProfile_tvCustID" />
 
     <TextView
         android:id="@+id/fragCustViewProfile_tvCustEmail"
@@ -56,7 +55,6 @@ tools:context=".CustomerViewProfileActivity">
         android:layout_marginTop="44dp"
         android:background="@drawable/border"
         android:gravity="center|start"
-        android:text="email"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/fragCustViewProfile_tvCustName"
         app:layout_constraintHorizontal_bias="0.0"
@@ -64,18 +62,17 @@ tools:context=".CustomerViewProfileActivity">
         app:layout_constraintTop_toBottomOf="@+id/fragCustViewProfile_tvCustName" />
 
     <TextView
-    android:id="@+id/fragCustViewProfile_tvCustPassword"
-    android:layout_width="243dp"
-    android:layout_height="43dp"
-    android:layout_marginTop="44dp"
-    android:background="@drawable/border"
-    android:gravity="center|start"
-    android:text="password"
-    android:textSize="20sp"
-    app:layout_constraintEnd_toEndOf="@+id/fragCustViewProfile_tvCustEmail"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintStart_toStartOf="@+id/fragCustViewProfile_tvCustEmail"
-    app:layout_constraintTop_toBottomOf="@+id/fragCustViewProfile_tvCustEmail" />
+        android:id="@+id/fragCustViewProfile_tvCustPassword"
+        android:layout_width="243dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="44dp"
+        android:background="@drawable/border"
+        android:gravity="center|start"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/fragCustViewProfile_tvCustEmail"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/fragCustViewProfile_tvCustEmail"
+        app:layout_constraintTop_toBottomOf="@+id/fragCustViewProfile_tvCustEmail" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar3"
